# simple-scheduler

./: Brewfile  CLIENT_PREFERENCE_AGENT_README.md  Makefile  README.md  demo_agents.py  demo_client_preference_agent.py  find_available_slots.py  manage.py  pyproject.toml  shell_commands.py  test_booked_day.py  test_integration.py  test_validation_comprehensive.py
agents/: AGENTS_README.md  __init__.py  appointment_request_agent.py  base.py  base_agent.py  claude_client.py  interface.py  response_models.py  schemas.py  supervisor.py  supervisor_agent.py
agents/sub_agents/: __init__.py  availability_optimizer.py  availability_optimizer_agent.py  client_preference_agent.py  preference_learner.py  preference_learner_agent.py  scheduling_agent.py
appointments/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
appointments/management/commands/: seed.py  seed_data.py
appointments/migrations/: 0001_initial.py  0002_client_clinician.py  0003_alter_appointment_duration_in_minutes.py
scheduler/: urls.py  views.py
scheduler/static/scheduler/: app.js  styles.css
scheduler/static/scheduler/src/: App.js
scheduler/static/scheduler/src/components/: AddAppointmentModal.js  Calendar.js  CalendarView.js  RequestSubmittedView.js  RequestView.js
scheduler/static/scheduler/src/utils/: dateUtils.js
scheduler/static/scheduler/styles/: base.css  calendar.css  main.css  modal.css  request-form.css
scheduler/templates/scheduler/: index.html
simple_scheduler/: asgi.py  settings.py  urls.py  wsgi.py
