[project]
name = "simple-scheduler"
version = "0.1.0"
description = "A simple appointment scheduler for therapists"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "sqlalchemy",
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "claude-code-sdk",
    "anthropic",
    "python-dotenv",
]
