[project]
name = "simple-scheduler"
version = "0.1.0"
description = "A simple appointment scheduler for therapists"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-ai",
    "httpx",
    "sqlalchemy",
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "claude-code-sdk",
    "anthropic",
    "python-dotenv",
    "pydantic-ai-slim[anthropic]",
    "channels>=4.0,<5.0",
    "channels-redis>=4.1,<5.0",
    "pytz",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simple_scheduler"]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ipython>=9.4.0",
]
